# AtelierBResourceLib

./: CMakeLists.txt  README.md
doc/: Doxygen.config
src/: AtelierBResourceLib.h  CMakeLists.txt  ResourceLibReader.cpp  legacy_api.cpp  legacy_api.h  version.cpp  version.h  version.h.in
test/: CMakeLists.txt  README.md  do_ctest
test/test02/: AtelierB
test/test02/output/reference/: stdout
test/test03/: AtelierB
test/test03/output/result/: stdout
test/tools/: CMakeLists.txt  printResourceFile.cpp  printResourceFileLegacy.c
